# django_tuss

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish-private.yml  python-publish-test.yml  python-publish.yml
django_tuss/: admin.py  apps.py  models.py
django_tuss/management/commands/: atualizar_tuss_codesystem.py
django_tuss/migrations/: 0001_initial.py
