[build-system]
requires = [
    "requests>=2.32.3",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-tuss"
version = "0.1"
dependencies = [
    "django>=5.1",
]
description = "Manter modelos atualizados com os Sistemas de codigos da ANS (TUSS)."
readme = "README.rst"
requires-python = ">= 3.10"
authors = [
    {name = "Edaurdo Stefanello", email = "eduardo@stefanello.cc"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.example.com/"