[build-system]
requires = [
    "requests>=2.32.3",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-tuss"
version = "0.2.1"
dependencies = [
    "django>=5.0",
]
description = "Manter models atualizados com a Terminologia Unificada da Saúde Suplementar do Brasil"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name = "Edaurdo Stefanello", email = "eduardo@stefanello.cc"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
[project.urls]
Homepage = "https://github.com/dudustefanello/django_tuss/"